<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <View
        android:id="@+id/view_statue"
        android:layout_width="match_parent"
        android:layout_height="@dimen/padding_top"
        android:background="@color/colorPrimary" />

    <include layout="@layout/include_toolbar" />

    <!--头像-->
    <RelativeLayout
        android:id="@+id/ll_user_set_head"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/selector_option_press"
        android:orientation="horizontal">

        <TextView
            style="@style/mine_user_set_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="15dp"
            android:text="@string/user_set_head"
            tools:ignore="RelativeOverlap" />

        <ImageView
            android:id="@+id/iv_user_set_head"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@+id/iv_next"
            android:src="@drawable/icon_mine_head"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/iv_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="15dp"
            android:src="@drawable/icon_next"
            tools:ignore="ContentDescription" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/line_color" />

    <com.dzkandian.common.widget.OptionView
        android:id="@+id/ov_user_set_name"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        app:option_background="@drawable/selector_option_press"
        app:option_title_text="@string/user_set_name" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/line_color" />

    <com.dzkandian.common.widget.OptionView
        android:id="@+id/ov_user_set_phone"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        app:option_background="@drawable/selector_option_press"
        app:option_title_text="@string/user_set_phone" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/line_color" />

    <com.dzkandian.common.widget.OptionView
        android:id="@+id/ov_user_set_sex"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        app:option_background="@drawable/selector_option_press"
        app:option_title_text="@string/user_set_sex" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/line_color" />

    <com.dzkandian.common.widget.OptionView
        android:id="@+id/ov_user_set_birthday"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        app:option_background="@drawable/selector_option_press"
        app:option_title_text="@string/user_set_birthday" />


    <com.dzkandian.common.widget.OptionView
        android:id="@+id/ov_user_set_weChat"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginTop="10dp"
        app:option_background="@drawable/selector_option_press"
        app:option_title_text="@string/user_set_weiXin" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/line_color" />

    <com.dzkandian.common.widget.OptionView
        android:id="@+id/ov_user_set_aLiPay"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        app:option_background="@drawable/selector_option_press"
        app:option_title_text="@string/user_set_payment" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/line_color" />

    <com.dzkandian.common.widget.OptionView
        android:id="@+id/ov_user_set_reset_pwd"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        app:option_background="@drawable/selector_option_press"
        app:option_title_text="@string/user_set_revisePwd" />

    <TextView
        android:id="@+id/tv_user_login_out"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/selector_option_press"
        android:gravity="center_vertical"
        android:paddingStart="15dp"
        android:text="@string/user_set_forgetPwd"
        android:textColor="@color/forget"
        android:textSize="@dimen/t16"
        tools:ignore="RtlSymmetry" />

</LinearLayout>