<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:minWidth="220dp"
        android:padding="15dp"
        android:text="@string/btn_camera"
        android:textColor="@color/color_text_title"
        android:textSize="@dimen/t16" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/line_color" />

    <TextView
        android:id="@+id/tv_album"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:minWidth="220dp"
        android:padding="15dp"
        android:text="@string/btn_album"
        android:textColor="@color/color_text_title"
        android:textSize="@dimen/t16" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/line_color" />

    <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:minWidth="220dp"
        android:padding="15dp"
        android:text="@string/btn_cancel"
        android:textColor="@color/color_text_title"
        android:textSize="@dimen/t16" />

</LinearLayout>