<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <View
        android:id="@+id/view_statue"
        android:layout_width="match_parent"
        android:layout_height="@dimen/padding_top"
        android:background="@color/colorPrimary" />

    <!--上标“用户注册”-->
    <include layout="@layout/include_toolbar" />

    <!--输入手机号-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginTop="22dp"
        android:background="@color/color_FFFFFF"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_register_phone"
            style="@style/login_register_edit_phone"
            android:layout_toStartOf="@+id/btn_register_getcode"
            android:hint="@string/hint_mobile" />

        <Button
            android:id="@+id/btn_register_getcode"
            style="@style/login_register_btn_captcha"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

    <View style="@style/login_line" />

    <!--输入验证码-->
    <EditText
        android:id="@+id/et_register_code"
        style="@style/login_register_edit_code"
        android:background="@color/color_FFFFFF" />

    <View style="@style/login_line" />

    <!--设置密码-->
    <EditText
        android:id="@+id/et_register_password"
        style="@style/login_register_edit_pwd"
        android:background="@color/color_FFFFFF"
        android:hint="@string/hint_password_reg" />

    <View style="@style/login_line" />

    <!--注册按钮-->
    <Button
        android:id="@+id/btn_register"
        style="@style/login_register_btn"
        android:text="@string/login_register_text" />

    <!--用户协议-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal">

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <TextView
            style="@style/style_txt_black_nine_small"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/user_protocol" />

        <TextView
            android:id="@+id/tv_register_agreement"
            style="@style/style_txt_red_small"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:clickable="true"
            android:gravity="center"
            android:text="用户协议" />
    </LinearLayout>

</LinearLayout>